<resources>
    <string name="app_name">FieldLocate</string>
    <string name="app_disclaimer">This Application is to be used exclusively with the FieldLocate application and will not work without the correct log in credentials. Please go to www.fieldlocate.com if you have further questions.</string>
    <string name="app_string_barcode_scanner_not_found">Please install the application Barcode Scanner (com.google.zxing.client.android) from the Android Market.</string>
    <string name="app_string_camscanner_not_found">Please install CamScanner from the Android Market to use this feature</string>
    <string name="app_string_file_manager_not_found">Please install a file manager application from the Android Market to use this feature</string>
    <string name="cant_save_file">Can\'t save photo. Please try again later.</string>
    <string name="lines_with_space">%1$s %2$s</string>
    <string name="estimate_disclaimer">This Application is to be used exclusively with the FieldLocate application and will not work without the correct log in credentials. Please go to www.fieldlocate.com if you have further questions.</string>
    <string name="need_to_install_barcode_scanner">The application for scanning barcodes has not been found on your device. In order to scan barcodes it will need to be installed.</string>
    <string name="network_unavailable">Please check your internet connection and try again.</string>
    <string name="not_available">n/a</string>
    <string name="line_with_space">\u0020%s</string>
    <string name="job_status_string_not_started">Not Started</string>
    <string name="job_status_string_on_route">En Route</string>
    <string name="job_status_string_pause">Pause</string>
    <string name="job_status_string_paused">Paused</string>
    <string name="job_status_string_parts_run">Parts Run</string>
    <string name="job_status_string_begin_work">Begin Work</string>
    <string name="job_status_string_working">Working</string>
    <string name="job_status_string_work_finished">Work Finished</string>
    <string name="job_status_string_finished">Finished</string>
    <string name="job_status_string_resume">Resume</string>
    <string name="job_status_string_close_appointment">Close Appointment</string>
    <string name="job_status_string_closed">Closed</string>
    <string name="button_string_search">Search</string>
    <string name="button_string_dismiss">Accept</string>
    <string name="button_string_save">Save</string>
    <string name="button_string_cancel">Cancel</string>
    <string name="button_string_add">Add</string>
    <string name="button_string_standard">Standard</string>
    <string name="button_string_additional">Additional</string>
    <string name="button_string_service_record">Service Record</string>
    <string name="button_string_edit">Edit</string>
    <string name="button_string_add_comment">Add Comment</string>
    <string name="button_string_new_appointment">New Appointment</string>
    <string name="button_string_edit_appointment">Edit Appointment</string>
    <string name="button_string_new_equipment">New Equipment</string>
    <string name="button_string_go_back">Go Back</string>
    <string name="button_string_next">Next</string>
    <string name="button_string_submit">Submit</string>
    <string name="button_string_swipe_card">Swipe Card</string>
    <string name="button_string_add_estimate">Add Estimate</string>
    <string name="button_string_add_location">Add Location</string>
    <string name="button_string_add_agreement">Add Agreement</string>
    <string name="button_string_set_date">Set Date</string>
    <string name="button_string_attach_barcode">Attach Barcode</string>
    <string name="button_string_yes">Yes</string>
    <string name="button_string_no">No</string>
    <string name="button_string_true">True</string>
    <string name="button_string_false">False</string>
    <string name="button_string_modify">Modify</string>
    <string name="button_string_remove">Remove</string>
    <string name="button_string_call">Call</string>
    <string name="button_string_customer_view">Customer View</string>
    <string name="dialog_header_string_disclaimer">Disclaimer</string>
    <string name="dialog_header_string_add_discount">Set Discount Pricing</string>
    <string name="dialog_header_string_add_new_location">Add New Location</string>
    <string name="dialog_header_string_add_appointment_notes">Appointment Notes</string>
    <string name="dialog_header_string_add_item">Add Item</string>
    <string name="dialog_header_string_select_pricing_options">Select Pricing Options</string>
    <string name="dialog_header_string_appointment_end_time">Appointment End Time</string>
    <string name="dialog_header_string_add_customer_notes">Add Notes to Customer</string>
    <string name="dialog_header_string_select_service_agreement">Select Service Agreement</string>
    <string name="dialog_header_string_scan_and_upload_file">Scan and Upload</string>
    <string name="dialog_header_string_associate_location">Associate Location</string>
    <string name="dialog_header_string_customer_email">Customer Email</string>
    <string name="dialog_header_string_location">Location</string>
    <string name="dialog_header_string_select_date">Select Date</string>
    <string name="select_status">Select Status</string>
    <string name="select_payment_type">Select Payment Type</string>
    <string name="dialog_body_string_discount_amount">Discount Amount:</string>
    <string name="dialog_body_string_scan_and_upload_file">You must have the "CamScanner" application installed. To use this, press the step 1 button to scan, when scanning has completed press the "Back" button on your phone, and then choose the "File Upload" (Step 2) button below. Navigate to your file, on the phone, usually in /sdcard/CamScanner/ and simply tap it to upload.</string>
    <string name="dialog_body_string_pair_blank_barcode_to_location">This location has no associated barcode. Would you like to associate it with the barcode that was just scanned?</string>
    <string name="dialog_body_string_pair_new_barcode_to_location">This location is associated with a barcode that is different from the one that has just been scanned in. Would you like to associate it with the barcode that was just scanned?</string>
    <string name="dialog_body_string_please_select_and_option_or_press_back_to_cancel">Please select an option, or press back to cancel</string>
    <string name="dialog_body_user_log_out">User Logout</string>
    <string name="dialog_header_capture_photo">Capture Photo</string>
    <string name="dialog_body_take_photo">Take a Customer Photo</string>
    <string name="dialog_body_choose_gallery">Choose from Photo Gallery</string>
    <string name="dialog_header_capture_photo_description">Photo Description</string>
    <string name="dialog_header_capture_photo_description_hint">(Optional) Add Description</string>
    <string name="hint_string_discount_amount">discount amount</string>
    <string name="hint_string_enter_notes">Enter notes here</string>
    <string name="hint_string_quantity">item quantity</string>
    <string name="not_found_string_disclaimer">Disclaimer text not found</string>
    <string name="empty_string_zero">0</string>
    <string name="empty_string_one">1</string>
    <string name="empty_string_no_invoices">No Invoices</string>
    <string name="empty_string_no_estimates">No Estimates</string>
    <string name="empty_string_none">None</string>
    <string name="empty_string_never_expire">Never Expire</string>
    <string name="placeholder_string_full_address">6851 NE Loop 820 Suite #200 North Richland Hills, TX 76180</string>
    <string name="placeholder_string_address_1">6851 NE Loop 820</string>
    <string name="placeholder_string_address_2">Suite #200</string>
    <string name="placeholder_string_address_city">North Richland Hills</string>
    <string name="placeholder_string_address_state">TX</string>
    <string name="placeholder_string_address_zip">76180</string>
    <string name="placeholder_string_phone_number">(123) 456 7890</string>
    <string name="placeholder_string_email_address">customer@mail.com</string>
    <string name="placeholder_string_customer_first_name">Customer</string>
    <string name="placeholder_string_customer_last_name">Name</string>
    <string name="placeholder_string_customer_full_name">Customer name</string>
    <string name="placeholder_string_appointment_type">Appointment Type</string>
    <string name="placeholder_string_appointment_status_completed">Closed</string>
    <string name="content_description_tab_dollars">Dollars Tab</string>
    <string name="content_description_tab_percentage">Percentage Tab</string>
    <string name="toast_string_you_must_select_a_start_time_first">You must select a start time first</string>
    <string name="toast_string_you_must_select_an_appointment_type_first">You must select an appointment type first</string>
    <string name="toast_string_gps_enabled">GPS Enabled</string>
    <string name="textview_string_select_appointment_type">Select Appointment Type:</string>
    <string name="textview_string_standard_or_additional_pricing">Use "Standard" or "Additional" Pricing?</string>
    <string name="textview_string_quantity">Quantity</string>
    <string name="textview_string_add_to_invoice">Add to Invoice</string>
    <string name="textview_string_address_1">Address 1:</string>
    <string name="textview_string_address_2">Address 2:</string>
    <string name="textview_string_address_city">City:</string>
    <string name="textview_string_address_province">Province:</string>
    <string name="textview_string_address_state">State:</string>
    <string name="textview_string_address_zip">Zip:</string>
    <string name="textview_string_address_phone_1">Phone 1:</string>
    <string name="textview_string_address_phone_2">Phone 2:</string>
    <string name="textview_string_address_postal_code">Postal Code:</string>
    <string name="textview_string_selected">Selected:</string>
    <string name="textview_string_upcoming_appointments">Upcoming Appointments</string>
    <string name="async_task_string_loading_appointments">Loading Appointments&#8230;</string>
    <string name="async_task_string_loading_appointment_types">Loading Appointment Types&#8230;</string>
    <string name="async_task_string_loading_appointment_history">Loading Appointment History&#8230;</string>
    <string name="async_task_string_loading_equipment">Loading Equipment&#8230;</string>
    <string name="async_task_string_loading_manufacturer_information">Loading Manufacturer Information&#8230;</string>
    <string name="async_task_string_loading_photos">Loading Photos&#8230;</string>
    <string name="async_task_string_loading_invoice">Loading Invoice&#8230;</string>
    <string name="async_task_string_loading_invoices">Loading Invoices&#8230;</string>
    <string name="async_task_string_loading_appointment">Loading Appointment&#8230;</string>
    <string name="async_task_string_loading_customers">Loading Customers&#8230;</string>
    <string name="async_task_string_loading_customer">Loading Customer&#8230;</string>
    <string name="async_task_string_loading_comments">Loading Comments&#8230;</string>
    <string name="async_task_string_loading_products">Loading Products&#8230;</string>
    <string name="async_task_string_loading_locations_and_equipment">Loading Locations and Equipment&#8230;</string>
    <string name="async_task_string_loading_estimate">Loading Estimate&#8230;</string>
    <string name="async_task_string_loading_estimates">Loading Estimates&#8230;</string>
    <string name="user_name">Username: </string>
    <string name="user_name_hint">user name</string>
    <string name="password">Password: </string>
    <string name="password_hint">password</string>
    <string name="display_password">Display password characters</string>
    <string name="bu_login">Login</string>
</resources>