<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@android:color/white"
	>


	    <TextView 
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_marginTop="6dp"
			android:text="@string/dialog_header_string_add_item"
			android:textColor="#7B7B7B"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="2dp"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			/>

	    <View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#E0E0E0"
			/>
	
	
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:paddingTop="6dp"
			>
		
			<TextView 
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:text="@string/textview_string_quantity"
				android:textColor="#000000"
				android:layout_weight="1"
				android:layout_marginLeft="4dp"
				/>
				
			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:hint="@string/hint_string_quantity"
				android:inputType="numberDecimal"
				android:text="@string/empty_string_one"
				android:id="@+id/dialog_layout_add_truck_item_edittext_quantity"
				android:background="@drawable/textbox_standard"
				android:layout_marginRight="4dp"
				android:paddingRight="2dp"
				/>
		</LinearLayout>
		
	    
	    
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		android:layout_gravity="bottom"
		>
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="3dp"
			android:layout_marginRight="10dp"
			android:layout_weight="0.5"
			android:focusable="true"
			android:id="@+id/dialog_layout_add_truck_item_button_add"
			android:text="@string/button_string_add"
			android:ems="4"
			android:textColor="#000000"
			android:textStyle="bold"
			android:textSize="16sp"
			android:background="@drawable/custom_button_gray_small_wide"
			android:gravity="center"
			/>
			
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="13dp"
			android:layout_marginRight="3dp"
			android:focusable="true"
			android:id="@+id/dialog_layout_add_truck_item_button_cancel"
			android:text="@string/button_string_cancel"
			android:ems="4"
			android:textColor="#000000"
			android:textStyle="bold"
			android:textSize="16sp"
			android:background="@drawable/custom_button_gray_small_wide"
			android:gravity="center"
			/>
	</LinearLayout>
</LinearLayout>