<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/custom_background_gradient_white_upper">

			
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:background="@android:color/transparent"
		
		>

	    <TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:text="@string/dialog_header_string_add_discount"
			android:textColor="#7B7B7B"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="2dp"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="6dp"
		>
	    
	    <View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#c6c6c6"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingTop="6dp"
		android:gravity="center"
		android:layout_marginTop="6dp"
		android:layout_marginBottom="12dp"
		>
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:paddingTop="6dp"
			>
		
			<TextView 
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:text="@string/dialog_body_string_discount_amount"
				android:textColor="#000000"
				android:layout_weight="1"
				android:layout_marginLeft="4dp"
				/>
				
			<EditText
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="right"
				android:hint="@string/hint_string_discount_amount"
				android:inputType="numberDecimal"
				android:text="@string/empty_string_zero"
				android:id="@+id/dialog_add_discount_edittext_value"
				android:background="@drawable/textbox_standard"
				android:layout_marginRight="4dp"
				android:paddingRight="2dp"
				/>
		
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_marginTop="4dp"
			android:layout_marginBottom="4dp"
			android:paddingLeft="2dp"
			android:paddingRight="2dp"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			android:gravity="center"
			>
		
			<ImageView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:id="@+id/dialog_add_discount_imageview_dollars"
			    android:src="@drawable/nav_invoice_discount_currency_pressed"
			    android:contentDescription="@string/content_description_tab_dollars"
			    />
				
			<ImageView 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:id="@+id/dialog_add_discount_imageview_percentage"
			    android:src="@drawable/custom_nav_button_invoice_discount_percentage"
			    android:contentDescription="@string/content_description_tab_percentage"
			    />
		</LinearLayout>
	</LinearLayout>
	
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="6dp"
		>
	    
	    <View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#c6c6c6"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"

		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		android:background="@drawable/custom_background_gradient_white_lower"
		>
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="3dp"
			android:focusable="true"
			android:id="@+id/dialog_add_discount_button_save"
			android:text="@string/button_string_save"
			android:textColor="#000000"
			android:textStyle="bold"
			android:textSize="12sp"
			android:background="@drawable/custom_button_gray_small_wide"
			android:layout_weight=".5"
			android:gravity="center"
			/>
			
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="3dp"
			android:focusable="true"
			android:id="@+id/dialog_add_discount_button_cancel"
			android:text="@string/button_string_cancel"
			android:textColor="#000000"
			android:textStyle="bold"
			android:textSize="12sp"
			android:background="@drawable/custom_button_gray_small_wide"
			android:gravity="center"
			/>
	</LinearLayout>
</LinearLayout>