<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sked="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.skeds.android.phone.business.Custom.Header
        android:id="@+id/activity_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dip"
        sked:back_button="0"
        sked:left_button_type="0"
        sked:nav_type="0"
        sked:right_button_type="0"
        sked:user_button="0" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_weight="1"
        android:paddingTop="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:background="@drawable/custom_textbox_login">

            <TextView
                android:id="@+id/user_name_title"
                style="@style/Skeds.TextView.Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name"
                style="@style/Skeds.TextView.Login.Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_name_title"
                android:layout_marginTop="5dp"
                android:layout_marginRight="14dp"
                android:layout_marginLeft="4dp"
                android:hint="@string/user_name_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/password_title"
                style="@style/Skeds.TextView.Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_marginTop="10dp"
                android:layout_alignLeft="@id/user_name_title"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                style="@style/Skeds.TextView.Login.Edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/password_title"
                android:layout_alignLeft="@id/user_name"
                android:layout_alignRight="@id/user_name"
                android:layout_below="@id/user_name"
                android:hint="@string/password_hint"
                android:layout_marginTop="5dp"
                android:password="true" />

            <View
                android:id="@+id/divider_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="8dp"
                android:layout_below="@id/password"
                android:background="#bbbbbb" />

            <CheckBox
                android:id="@+id/display_password"
                style="@style/Skeds.CheckBox.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_below="@id/divider_top"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/btn_check_holo_light"
                android:text="@string/display_password" />

            <View
                android:id="@+id/divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_below="@id/display_password"
                android:background="#bbbbbb" />

            <TextView
                android:id="@+id/login"
                style="@style/Skeds.TextView.Login.Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_bottom"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/bu_login" />

        </RelativeLayout>

    </ScrollView>

    <!-- Disclaimer -->
    <TextView
        style="@style/Skeds.TextView.Disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_weight="1"
        android:paddingBottom="6dp"
        android:paddingTop="4dp"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:text="@string/app_disclaimer" />

</LinearLayout>