<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/custom_background_gradient_white_upper">

			
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:background="@android:color/transparent"
		>

	    <TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:text="@string/dialog_header_string_disclaimer"
			android:textColor="#7B7B7B"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="2dp"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="6dp"
		>
	    
	    <View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#c6c6c6"
			/>
	</LinearLayout>
	
	<ScrollView
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		
		>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical"
			>
	        
	        <!-- Body Text -->
	        <LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingTop="6dp"
				android:gravity="center"
				android:layout_marginTop="6dp"
				android:layout_marginBottom="12dp"
				>
			
				<TextView 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/not_found_string_disclaimer"
					android:textColor="#000000"
					android:layout_marginLeft="4dp"
					android:layout_marginRight="2dp"
					android:textSize="12sp"
					android:id="@+id/dialog_invoice_disclaimer_textview_disclaimer"
					/>
			</LinearLayout>
			
	        <View
				android:layout_width="fill_parent"
				android:layout_height="1dip"
				android:layout_marginTop="6dp"
				android:background="#c6c6c6"
				/>
		
	        <!-- Dismiss button -->
			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
		
				android:paddingLeft="2dp"
				android:paddingRight="2dp"
				android:paddingTop="4dp"
				android:paddingBottom="4dp"
				android:layout_marginBottom="6dip"
				android:background="@drawable/custom_background_gradient_white_lower"
				android:gravity="center"
				>
					
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="4dp"
					android:layout_marginLeft="3dp"
					android:layout_marginBottom="2dp"
					android:focusable="true"
					android:id="@+id/dialog_invoice_disclaimer_button_dismiss"
					android:text="@string/button_string_dismiss"
					android:textColor="#000000"
					android:textStyle="bold"
					android:textSize="12sp"
					android:background="@drawable/custom_button_gray_small_wide"
					android:gravity="center"
					/>
			</LinearLayout>
	    </LinearLayout>
	</ScrollView>
</LinearLayout>