<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/custom_background_gradient_white_upper">

			
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:background="@android:color/transparent"
		>

	    <TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="6dp"
			android:text="@string/dialog_header_string_appointment_end_time"
			android:textColor="#7B7B7B"
			android:textSize="18sp"
			android:textStyle="bold"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="2dp"
			android:paddingTop="4dp"
			android:paddingBottom="4dp"
			/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="6dp"
		>
	    
	    <View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#c6c6c6"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:paddingTop="6dp"
		android:gravity="center"
		android:layout_marginTop="6dp"
		android:layout_marginBottom="12dp"
		>
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Select End Time:"
			android:textColor="@android:color/black"
			/>
		
		<Spinner 
	    	android:id="@+id/dialog_appointment_end_time_spinner"
	    	android:layout_width="0dip"
	    	android:layout_height="wrap_content"
			android:paddingLeft="4dp"
	    	android:layout_weight="1"
	    	android:background="@drawable/custom_spinner_rounded"
	    	/>
	</LinearLayout>
	
    <LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:layout_marginTop="6dp"
		>
	    
	    <View
			android:layout_width="fill_parent"
			android:layout_height="1dip"
			android:background="#c6c6c6"
			/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"

		android:paddingLeft="2dp"
		android:paddingRight="2dp"
		android:paddingTop="4dp"
		android:paddingBottom="4dp"
		android:background="@drawable/custom_background_gradient_white_lower"
		>
	
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="3dp"
			android:focusable="true"
			android:id="@+id/dialog_appointment_end_time_button_save"
			android:text="@string/button_string_save"
			android:textColor="#000000"
			android:textStyle="bold"
			android:textSize="12sp"
			android:background="@drawable/custom_button_gray_small_wide"
			android:layout_weight=".5"
			android:gravity="center"
			/>
			
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:layout_marginTop="4dp"
			android:layout_marginLeft="3dp"
			android:focusable="true"
			android:id="@+id/dialog_appointment_end_time_button_cancel"
			android:text="@string/button_string_cancel"
			android:textColor="#000000"
			android:textStyle="bold"
			android:textSize="12sp"
			android:background="@drawable/custom_button_gray_small_wide"
			android:gravity="center"
			/>
	</LinearLayout>
</LinearLayout>